vlib/v/checker/tests/noreturn_without_loop_or_another_noreturn_at_end.out
vlib/v/checker/tests/noreturn_without_loop_or_another_noreturn_at_end.vv:3:2: error: [noreturn] functions should end with a call to another [noreturn] function, or with an infinite `for {}` loop
    1 | [noreturn]
    2 | fn another() {
    3 |     eprintln(@FN)
      |     ~~~~~~~~~~~~~
    4 | }
    5 |
