vlib/v/checker/tests/noreturn_without_loop_or_another_noreturn_at_end.vv
[noreturn]
fn another() {
	eprintln(@FN)
}

[noreturn]
fn abc() {
	eprintln(@FN)
	another()
}

fn main() {
	eprintln('start')
	abc()
	eprintln('done')
}
